
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int sizeupvalues; int * upvalues; } ;
typedef TYPE_1__ Proto ;


 char* VOID (TYPE_1__ const*) ;
 char* getstr (int ) ;
 int printf (char*,int,char*) ;

__attribute__((used)) static void PrintUpvalues(const Proto* f)
{
 int i,n=f->sizeupvalues;
 printf("upvalues (%d) for %p:\n",n,VOID(f));
 if (f->upvalues==((void*)0)) return;
 for (i=0; i<n; i++)
 {
  printf("\t%d\t%s\n",i,getstr(f->upvalues[i]));
 }
}
